--- a/index.html
+++ b/index.html
@@ -37,13 +37,33 @@
                 <!-- <img src="assets/img/arham.png" alt="About Me"> -->
                 <p>I'm a Software Developer with experience in backend development and ERP systems. I specialize in
                     Python, Flask, and PostgreSQL. At Binary Semantics, I have worked on real-time API integrations,
-                    automated database dump processes, and optimized storage-leading to a 60% reduction in database
+                    automated database dump processes, and optimized storage—leading to a 60% reduction in database
                     size. I’m passionate about solving complex problems, building scalable systems, and continuously
                     improving application performance and user experience. <br></p>
                 <!-- This is used to view host file -->
-                <div class="resume"><button type="submit"
-                        onclick="window.open('https://mohdarham.github.io/Arham-Resume/', '_blank')">Resume</button>
+                <div class="resume">
+                    <button type="button" onclick="window.open('https://mohdarham.github.io/Arham-Resume/', '_blank')">
+                        Resume
+                    </button>
+                    <button type="button"
+                        onclick="window.open('https://www.linkedin.com/in/mohammad-arham-4ab292248', '_blank')">
+                        LinkedIn
+                    </button>
+                    <button type="button" onclick="window.open('https://github.com/MohdArham', '_blank')">
+                        GitHub
+                    </button>
+                    <button type="button" onclick="window.open('mailto:mohdarham94@gmail.com', '_blank')">
+                        Email
+                    </button>
+                    <button type="button"
+                        onclick="window.open('https://www.instagram.com/ar.ham_5/?igshid=ZDc4ODBmNjlmNQ%3D%3D', '_blank')">
+                        Instagram
+                    </button>
                 </div>
+
+
+
+
             </div>
             <div class="box box2 animate__animated animate__slideInUp wow" data-wow-duration="1s"
                 data-wow-delay="0.37s">
@@ -118,6 +138,45 @@
             </div>
         </div>
     </div>
+    <!-- Work Experience Section -->
+    <div class="experience projects">
+        <h1 style="font-size: 36px; color: #000000; text-align: center; margin-bottom: 20px;">WORK EXPERIENCE</h1>
+
+        <!-- Job 1 -->
+        <div class="project-card">
+            <h2 class="project-title">Associate Software Developer – Binary Semantics Ltd.</h2>
+            <p class="experience-duration">Aug 2024 – Present · Gurugram, Haryana, India (On-site)</p>
+            <p class="project-description">
+                • Customizing Odoo ERP with Python<br>
+                • Managing PostgreSQL databases and queries<br>
+                • Utilizing Linux for a robust development environment<br>
+                • Optimized database queries (PostgreSQL, MySQL) to improve performance by up to 40%<br>
+                • Collaborated with frontend teams to integrate APIs into web and mobile apps<br>
+                • Built a <b>Serverless Report Generator</b> using AWS Lambda + Python, delivered via API Gateway<br>
+            </p>
+        </div>
+
+        <!-- Job 2 -->
+        <div class="project-card">
+            <h2 class="project-title">Web Development Intern – Oasis Infobyte</h2>
+            <p class="experience-duration">Jun 2023 – Jul 2023 · 2 months</p>
+            <p class="project-description">
+                • Developed a responsive portfolio website<br>
+                • Implemented modern UI/UX design principles to enhance user experience<br>
+            </p>
+        </div>
+
+        <!-- Job 3 -->
+        <div class="project-card">
+            <h2 class="project-title">Frontend Web Development Intern – InternPe</h2>
+            <p class="experience-duration">May 2023 – Jun 2023 · 2 months</p>
+            <p class="project-description">
+                • Created a calculator, e-commerce website, and length converter tool<br>
+                • Enhanced user interface design and functionality for various web projects<br>
+            </p>
+        </div>
+    </div>
+
 
     <!-- Projects Section -->
     <div class="projects">
@@ -176,7 +235,7 @@
 
 
     <!-- Certifications Section -->
-    <div class="certifications">
+    <div class="certifications projects">
         <h1 style="font-size: 36px; color: #000000; text-align: center; margin-bottom: 20px;">CERTIFICATIONS</h1>
 
         <!-- certifications 1 -->
@@ -232,39 +291,17 @@
     </div>
     </div>
 
-    <div class="container">
-        <div class="social-links">
-            <ul>
-                <li><a href="https://github.com/MohdArham" target="_blank"><i class="fab fa-github iconn"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/mohd-arham-4ab292248" target="_blank"><i
-                            class="fab fa-linkedin-in iconn"></i></a></li>
-                <li><a href="mailto:mohdarham94@gmail.com" target="_blank"><i class="fab fa-google iconn"></i></a></li>
-                <li><a href="https://www.instagram.com/ar.ham_5/?igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank"><i
-                            class="fab fa-instagram iconn"></i></a></li>
-            </ul>
-        </div>
-        <div class="footer">Made by <a href="https://github.com/MohdArham">Mohammad Arham</a></div>
-        <!-- Contact Button code and inline -->
-        <li class="ContactColour"><a href="Contact.html">Contact</a></li>
-        <style>
-            .ContactColour a {
-                color: #4CAF50;
-                text-decoration: none;
-            }
+ <footer class="footer">
+  <div class="footer-container" style="text-align: center;">
+    <span>Made by <a href="https://github.com/MohdArham">Mohammad Arham</a></span> | 
+    <span>&copy; 2024 | All Rights Reserved!</span> | 
+    <span><a href="Contact.html" class="ContactColour">Contact Me</a></span>
+  </div>
+</footer>
 
-            .ContactColour a:hover {
-                color: #0c0c0c;
-            }
-        </style>
-    </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <section>
-            <div class="credit">&copy; copyright @ 2024 Mohammad Arham | All Rights Reserved!</div>
-        </section>
-    </footer>
-
+    
+    
     <!-- TypedJs -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script>
