--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
             <div class="box box1 animate__animated animate__slideInLeft wow" data-wow-duration="1s" data-wow-delay="0s">
                 <span> <b>ABOUT ME</b></span>
                 <!-- <img src="assets/img/arham.png" alt="About Me"> -->
-                <p>I am a Python Backend Developer specializing in building scalable backend systems, ERP integrations, data pipelines and analytics dashboards. With hands-on experience in Odoo, Flask, PostgreSQL, and data pipelines, I have worked on real-world projects involving API development, module customization, and process automation.Also, architecting an ETL pipeline from PostgreSQL to Amazon Redshift using Apache Airflow.
-<br><br>
-I focus on writing clean, maintainable code and solving practical business problems through backend engineering.</p>
+                <p>I am a Python Backend Developer specializing in building scalable backend systems, ERP integrations,
+                    data pipelines and analytics dashboards. With hands-on experience in Odoo, Flask, PostgreSQL, and
+                    data pipelines, I have worked on real-world projects involving API development, module
+                    customization, and process automation.Also, architecting an ETL pipeline from PostgreSQL to Amazon
+                    Redshift using Apache Airflow.
+                    <br><br>
+                    I focus on writing clean, maintainable code and solving practical business problems through backend
+                    engineering.
+                </p>
                 <!-- This is used to view host file -->
                 <div class="resume">
                     <button type="button" onclick="window.open('https://mohdarham.github.io/Arham-Resume/', '_blank')">
@@ -54,8 +60,8 @@ I focus on writing clean, maintainable code and solving practical business probl
                         Email
                     </button>
                     <button type="button" onclick="window.open('Contact.html', '_self')">
-        Contact Me
-    </button>
+                        Contact Me
+                    </button>
                     <button type="button"
                         onclick="window.open('https://www.instagram.com/ar.ham_5/?igshid=ZDc4ODBmNjlmNQ%3D%3D', '_blank')">
                         Instagram
@@ -143,39 +149,39 @@ I focus on writing clean, maintainable code and solving practical business probl
                         <li>VS Code</li>
                     </ul>
                 </ul>
-<span style="width: 100%; text-align: center;">DATABASE & CLOUD</span>
-<ul class="mainlist">
-    <li class="sublist">
-        <div class="icon colorful-icon">
-            <i class="devicon-postgresql-plain-wordmark"></i>
-        </div>
-        <div>PostgreSQL</div>
-    </li>
-    <li class="sublist">
-        <div class="icon colorful-icon">
-            <i class="devicon-amazonwebservices-plain-wordmark"></i>
-        </div>
-        <div>AWS</div>
-    </li>
-    <!-- <li class="sublist">
+                <span style="width: 100%; text-align: center;">DATABASE & CLOUD</span>
+                <ul class="mainlist">
+                    <li class="sublist">
+                        <div class="icon colorful-icon">
+                            <i class="devicon-postgresql-plain-wordmark"></i>
+                        </div>
+                        <div>PostgreSQL</div>
+                    </li>
+                    <li class="sublist">
+                        <div class="icon colorful-icon">
+                            <i class="devicon-amazonwebservices-plain-wordmark"></i>
+                        </div>
+                        <div>AWS</div>
+                    </li>
+                    <!-- <li class="sublist">
         <div class="icon colorful-icon">
             <i class="devicon-redshift-plain-wordmark"></i>
         </div>
         <div>Redshift</div>
     </li> -->
-    <li class="sublist">
-        <div class="icon colorful-icon">
-            <i class="devicon-apache-plain-wordmark"></i>
-        </div>
-        <div>Airflow</div>
-    </li>
-    <!-- <li class="sublist">
+                    <li class="sublist">
+                        <div class="icon colorful-icon">
+                            <i class="devicon-apache-plain-wordmark"></i>
+                        </div>
+                        <div>Airflow</div>
+                    </li>
+                    <!-- <li class="sublist">
         <div class="icon colorful-icon">
             <i class="devicon-jenkins-plain"></i>
         </div>
         <div>Jenkins</div>
     </li> -->
-</ul>
+                </ul>
 
             </div>
         </div>
@@ -190,10 +196,12 @@ I focus on writing clean, maintainable code and solving practical business probl
             <p class="experience-duration">Aug 2024 – Present · Gurugram, Haryana, India (On-site)</p>
             <p class="project-description">
                 • Migrated file storage to AWS S3, reducing database size by 60% and enhancing performance.<br>
-                • Developed a full-stack analytics dashboard using Flask, Python, PostgreSQL, and custom API controllers with role-based access.<br>
+                • Developed a full-stack analytics dashboard using Flask, Python, PostgreSQL, and custom API controllers
+                with role-based access.<br>
                 • Developed real-time FASTag vehicle tracking with Google Maps API in the logistics module.<br>
                 • Integrated an AI-powered Rasa chatbot to automate dashboard-based user interactions.<br>
-                • Architected a config-driven, incremental ETL pipeline (using Python & Airflow) to replicate Odoo (PostgreSQL) data to Amazon Redshift.<br>
+                • Architected a config-driven, incremental ETL pipeline (using Python & Airflow) to replicate Odoo
+                (PostgreSQL) data to Amazon Redshift.<br>
                 • Configured web servers, hosted APIs, and managed subdomains on Ubuntu Linux (AWS EC2).<br>
                 • Integrated external APIs (ULIP, PAN, DL) for real-time data validation.<br>
                 • Automated database dump pipelines using Apache Airflow.
@@ -228,24 +236,28 @@ I focus on writing clean, maintainable code and solving practical business probl
 
 
         <div class="project-card">
-    <h2 class="project-title">Odoo Custom Module Development</h2>
-    <p class="project-description">Customized purchase, sales, and HR modules; built custom APIs for mobile applications.</p>
-</div>
+            <h2 class="project-title">Odoo Custom Module Development</h2>
+            <p class="project-description">Customized purchase, sales, and HR modules; built custom APIs for mobile
+                applications.</p>
+        </div>
 
-<div class="project-card">
-    <h2 class="project-title">Flask-based Analytics Dashboard Backend</h2>
-    <p class="project-description">Built REST APIs for charts, metrics, and real-time dashboards using PostgreSQL.</p>
-</div>
+        <div class="project-card">
+            <h2 class="project-title">Flask-based Analytics Dashboard Backend</h2>
+            <p class="project-description">Built REST APIs for charts, metrics, and real-time dashboards using
+                PostgreSQL.</p>
+        </div>
 
-<div class="project-card">
-    <h2 class="project-title">PostgreSQL → Redshift ETL Pipeline</h2>
-    <p class="project-description">Worked on a chunk-based, memory-efficient ETL migration pipeline.</p>
-</div>
+        <div class="project-card">
+            <h2 class="project-title">PostgreSQL → Redshift ETL Pipeline</h2>
+            <p class="project-description">Worked on a chunk-based, memory-efficient ETL migration pipeline.</p>
+        </div>
 
-<div class="project-card">
-    <h2 class="project-title">Flask JWT Task Manager</h2>
-    <p class="project-description">Developed a secure REST API for a Task Manager application using Flask and Flask-RESTful. Implemented user authentication and authorization using JSON Web Tokens (JWT) to secure endpoints for creating, retrieving, updating, and deleting tasks.</p>
-</div>
+        <div class="project-card">
+            <h2 class="project-title">Flask JWT Task Manager</h2>
+            <p class="project-description">Developed a secure REST API for a Task Manager application using Flask and
+                Flask-RESTful. Implemented user authentication and authorization using JSON Web Tokens (JWT) to secure
+                endpoints for creating, retrieving, updating, and deleting tasks.</p>
+        </div>
 
         <!-- Project 1 -->
         <div class="project-card">
@@ -358,38 +370,38 @@ I focus on writing clean, maintainable code and solving practical business probl
 
 
     <div class="education projects">
-    <h1 style="font-size: 36px; color: #000000; text-align: center; margin-bottom: 20px;">EDUCATION</h1>
+        <h1 style="font-size: 36px; color: #000000; text-align: center; margin-bottom: 20px;">EDUCATION</h1>
 
-    <div class="project-card">
-        <h2 class="project-title">Bachelor of Technology (B.Tech) in Computer Science</h2>
-        <p class="project-description">
-            <strong>Jamia Hamdard University, New Delhi</strong><br>
-            2020 – 2024<br>
-            CGPA: 8.26
-        </p>
+        <div class="project-card">
+            <h2 class="project-title">Bachelor of Technology (B.Tech) in Computer Science</h2>
+            <p class="project-description">
+                <strong>Jamia Hamdard University, New Delhi</strong><br>
+                2020 – 2024<br>
+                CGPA: 8.26
+            </p>
+        </div>
+
+        <div class="project-card">
+            <h2 class="project-title">St. Mary's Senior Secondary School</h2>
+            <p class="project-description">
+                Intermediate (PCM) - 2020<br>
+                High School - 2018
+            </p>
+        </div>
+    </div>
     </div>
 
-    <div class="project-card">
-        <h2 class="project-title">St. Mary's Senior Secondary School</h2>
-        <p class="project-description">
-            Intermediate (PCM) - 2020<br>
-            High School - 2018
-        </p>
-    </div>
-</div>
-    </div>
-
- <footer class="footer">
-  <div class="footer-container" style="text-align: center;">
-    <span>Made by <a href="https://github.com/MohdArham">Mohammad Arham</a></span> | 
-    <span>&copy; 2024 | All Rights Reserved!</span> | 
-    <span><a href="Contact.html" class="ContactColour">Contact Me</a></span>
-  </div>
-</footer>
+    <footer class="footer">
+        <div class="footer-container" style="text-align: center;">
+            <span>Made by <a href="https://github.com/MohdArham">Mohammad Arham</a></span> |
+            <span>&copy; 2024 | All Rights Reserved!</span> |
+            <span><a href="Contact.html" class="ContactColour">Contact Me</a></span>
+        </div>
+    </footer>
 
 
-    
-    
+
+
     <!-- TypedJs -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script>
